# 25022025group

./: Makefile  README.md  conftest.py  hw-3.py  library_models.py  models.py  my_dream.txt  pyproject.toml  pytest.ini  utils.py
.github/workflows/: test-study.yaml
test_library_and_books/: test_book_model.py  test_libraries.py
tests/: test_bank_account.py
